<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".SetupActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_monitor"
        android:id="@+id/startButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:onClick="startMonitor" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/simulateSwitch"
        android:layout_above="@+id/startButton"
        android:layout_marginBottom="10dp"
        android:layout_alignEnd="@+id/startButton" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/simulate_text"
        android:id="@+id/simulateText"
        android:layout_alignTop="@+id/simulateSwitch"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/simulateText"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="10dp"
        android:id="@+id/sunblockLevel">

        <ToggleButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textOn="@string/sunblock_level_mild"
            android:textOff="@string/sunblock_level_mild"
            android:id="@+id/sunblockLevelMild"
            android:layout_weight="1"
            android:checked="true" />

        <ToggleButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textOn="@string/sunblock_level_medium"
            android:textOff="@string/sunblock_level_medium"
            android:id="@+id/sunblockLevelMedium"
            android:layout_weight="1" />

        <ToggleButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textOn="@string/sunblock_level_Well"
            android:textOff="@string/sunblock_level_Well"
            android:id="@+id/sunblockLevelWell"
            android:layout_weight="1" />

        <ToggleButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textOn="@string/sunblock_level_High"
            android:textOff="@string/sunblock_level_High"
            android:id="@+id/sunblockLevelHigh"
            android:layout_weight="1" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/sunblock_level_text"
        android:id="@+id/sunblockLevelText"
        android:layout_above="@+id/sunblockLevel"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/sunblockLevelText"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="10dp"
        android:id="@+id/tanLevel">

        <ToggleButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textOn="@string/suntan_level_mild"
            android:textOff="@string/suntan_level_mild"
            android:id="@+id/tanLevelMild"
            android:layout_weight="1"
            android:checked="true" />

        <ToggleButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textOn="@string/suntan_level_medium"
            android:textOff="@string/suntan_level_medium"
            android:id="@+id/tanLevelMedium"
            android:layout_weight="1" />

        <ToggleButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textOn="@string/suntan_level_Well"
            android:textOff="@string/suntan_level_Well"
            android:id="@+id/tanLevelWell"
            android:layout_weight="1" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/suntan_level_text"
        android:id="@+id/tanLevelText"
        android:layout_above="@+id/tanLevel"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/selfieSunImage"
        android:src="@drawable/selfiesun"
        android:layout_marginBottom="10dp"
        android:layout_above="@+id/tanLevelText"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />

</RelativeLayout>
